--- a/Testing iMeeting/Views/iMeeting/Venue.cshtml
+++ b/Testing iMeeting/Views/iMeeting/Venue.cshtml
@@ -3,9 +3,6 @@
 @{
     ViewBag.Title = "Index";
 }
-<meta charset="UTF-8" />
-
-<!-- Button trigger modal -->
 <hr />
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="clearTextBox()" style="float:right">
     <i class="fa fa-plus" aria-hidden="true"></i>
@@ -81,7 +78,7 @@
 </div>
 
 
-<!-- Modal -->
+<!--Import From AMS Modal -->
 <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog  mw-100 w-75">
         <div class="modal-content">
@@ -98,7 +95,6 @@
                             <th>Name</th>
                             <th>Designation</th>
                             <th>Email</th>
-                            @*  <th>Department</th>*@
                             <th>Actions</th>
                         </tr>
                     </thead>
@@ -114,6 +110,8 @@
     </div>
 </div>
 <br />
+<!--Import From AMS Table -->
+
 <table id="example2" class="table table-striped" style="width:100%">
     <thead>
         <tr>
@@ -128,296 +126,8 @@
 </table>
 
 <!-- Modal -->
-@*Crud of Venue*@
-<script>
-    $(document).ready(function () {
-
-
-        // $('#example2').DataTable();
-        toastr.options.timeOut = 1500; // 1.5s
-        LoadData();
-        LoadUsers();
-        clearTextBox();
-        LoadIdentityUsers();
-
-    });
-    function LoadUsers() {
-        $.ajax({
-            url: "https://mocki.io/v1/47d6bde5-cbbf-4788-8066-6feaa4cbb286",
-            type: "GET",
-            contentType: "application/json",
-            dataType: "json",
-            success: function (result) {
-                var html = '';
-                $.each(result, function (key, item) {
-                    
-
-                    console.log(result.length)
-                    //debugger
-                    html += '<tr>';
-                    html += '<td>' + '<input type="checkbox" />' + '</td>';
-                    html += '<td>' + item.name + '</td>';
-                    html += '<td>' + item.Designation + '</td>';
-                    html += '<td>' + item.Email + '</td>';
-                    //html += '<td>' + item.Department + '</td>';
-                    html += '<td>' + item.name + '</td>';
-                    html += '</tr>';
-                });
-
-                $('.tbody1').html(html);
-                $('#MainTbl').DataTable();
-
-            },
-            error: function (errormessage) {
-                alert(errormessage.responseText);
-            }
-        });
-
-
-
-    }
-    function LoadData() {
-        // debugger
-        $.ajax({
-            url: "http://localhost:52092/api/VenueApi/Get",
-            type: "GET",
-            contentType: "application/json",
-            dataType: "json",
-            success: function (result) {
-                var html = '';
-                $.each(result, function (key, item) {
-
-                    //debugger
-                    html += '<tr>';
-                    html += '<td>' + item.ID + '</td>';
-                    html += '<td>' + item.RoomName + '</td>';
-                    html += '<td>' + item.Location + '</td>';
-                    html += '<td>' + item.Limit + '</td>';
-                    html += '<td><i class="fa fa-edit" onclick="return getbyID(' + item.ID + ')" style="font-size:22px;color:#0d6efd"></i> | <i class="fa fa-trash" style="font-size:22px;color:#0d6efd" onclick="Delele(' + item.ID + ')"></i></td>';
-                    html += '</tr>';
-                    //console.log(item.id)
-                });
-
-                $('.tbody').html(html);
-                $('#example').DataTable();
-            },
-            error: function (errormessage) {
-                alert(errormessage.responseText);
-            }
-        });
-
-
-
-    }
-    function Add() {
-        
-        debugger
-        var Param = {
-            //ID: $('#ID').val(),
-            RoomName: $('#RoomName').val(),
-            Location: $('#Location').val(),
-            Limit: $('#Limit').val()
-        };
-        console.log(Param.Limit);
-        if (Param.RoomName == "" || Param.Location == "" || Param.Limit==0) { console.log("Validation Error !!") }
-        else {
-            $.ajax({
-
-                url: "http://localhost:52092/api/VenueApi/Add/" + Param,
-                data: JSON.stringify(Param),
-                type: "POST",
-                contentType: "application/json",
-                dataType: "json",
-                success: function (result) {
-
-                    $('#exampleModal').modal('hide');
-                    toastr.success('Added Successfully !!');
-                    clearTextBox();
-                    LoadData();
-                },
-                error: function (errormessage) {
-                    console.log(errormessage.responseText);
-                }
-            });
-        }
-    }
-    function clearTextBox() {
-        $('#ID').val("");
-        $('#RoomName').val("");
-        $('#Location').val("");
-        $('#Limit').val("");
-        $('#btnUpdate').hide();
-        $('#btnAdd').show();
-
-    }
-    function Delele(ID) {
-        var a = "All"
-        var ans = confirm("Are you sure you want to delete this Record?");
-        if (ans) {
-            // debugger
-            $.ajax({
-                url: "http://localhost:52092/Api/VenueApi/Delete/" + ID,
-                type: "DELETE",
-                //contentType: "text/plain",
-                //dataType: "json",
-                success: function (result) {
-                    LoadData();
-                    toastr.info('Deleted Successfully !!');
-                },
-                error: function (errormessage) {
-                    alert(errormessage.responseText);
-                }
-            });
-        }
-    }
-    function getbyID(ID) {
-        // debugger
-        $.ajax({
-
-            url: "http://localhost:52092/Api/VenueApi/GetById/" + ID,
-            type: "GET",
-            contentType: "application/json;charset=UTF-8",
-            dataType: "json",
-            success: function (result) {
-                $('#ID').val(result.ID);
-                $('#RoomName').val(result.RoomName);
-                $('#Location').val(result.Location);
-                $('#Limit').val(result.Limit);
-
-
-                $('#exampleModal').modal('show');
-                $('#btnUpdate').show();
-                $('#btnAdd').hide();
-                console.log(result);
-
-            },
-            error: function (errormessage) {
-                alert(errormessage.responseText);
-            }
-        });
-    }
-    function Update() {
-
-        var Param = {
-            ID: $('#ID').val(),
-            RoomName: $('#RoomName').val(),
-            Location: $('#Location').val(),
-            Limit: $("#Limit").val()
-        };
-        console.log(Param)
-        $.ajax({
-            url: "http://localhost:52092/Api/VenueApi/UpdateVenue",
-            data: JSON.stringify(Param),
-            type: "Put",
-            contentType: "application/json;charset=utf-8",
-            dataType: "json",
-            success: function (result) {
-
-                $('#exampleModal').modal('hide');
-                toastr.info('Updated Successfully !!');
-                LoadData();
-                clearTextBox();
-
-            },
-            error: function (errormessage) {
-                alert(errormessage.responseText);
-            }
-        });
-    }
-    function LoadIdentityUsers() {
-        $.ajax({
-            url: "http://localhost:52092/api/VenueApi/GetUsersData",
-            type: "GET",
-            contentType: "application/json",
-            dataType: "json",
-            success: function (result) {
-                var html = '';
-                $.each(result, function (key, item) {
-                    var id = item.Id;
-                    html += '<tr>';
-                    html += '<td>' + item.Id + '</td>';
-                    html += '<td>' + item.FullName + '</td>';
-                    html += '<td>' + item.Designation + '</td>';
-                    html += '<td>' + item.Email + '</td>';/*onclick='gothere(\""+f+"\");'*/
-                    html += '<td><i id="user" class="fa fa-trash" style="font-size:22px;color:#0d6efd" onclick="DeleteUser(\'' + item.Id + '\')" ></i></td>';
-                    html += '</tr>';
-                    console.log(id);
-                });
-
-                $('.tbody2').html(html);
-                $('#example2').DataTable();
-            },
-            error: function (errormessage) {
-                alert(errormessage.responseText);
-            }
-        });
-
-
-
-    }
-    function DeleteUser(Id) {
-        debugger
-        console.log(Id);
-        var ans = confirm("Are you sure you want to delete this Record?");
-        //let Id = $(event.relatedTarget).find('#user');
-        // console.log(Id);
-
-        if (ans) {
-            debugger
-            $.ajax({
-                url: "http://localhost:52092/api/VenueApi/DellUsersData?Id=" + Id,
-                type: "DELETE",
-                success: function (result) {
-                    LoadIdentityUsers();
-                    toastr.info('Deleted Successfully !!');
-                },
-                error: function (errormessage) {
-                    alert(errormessage.responseText);
-                }
-            });
-        }
-    }
-
-</script>
-
-@*<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>*@
-<script type="text/javascript">
-    $(function () {
-        $("#copy").click(function () {
-            var getSelectedRows = $("#MainTbl input:checked").parents("tr").clone();
-
-            // $("#example2 tbody").append(getSelectedRows);
-            console.log(getSelectedRows.length)
-            var name = $(getSelectedRows).find("td")[1].innerHTML;
-            var designation = $(getSelectedRows).find("td")[2].innerHTML;
-            var email = $(getSelectedRows).find("td")[3].innerHTML;
-            console.log(name); console.log(email);
-            var Param = {
-                name: name,
-                designation: designation,
-                email: email
-            };
-            $.ajax({
-                type: "POST",
-                url: "/Account/Register",
-                data: JSON.stringify(Param),
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                success: function (response) {
-                    LoadIdentityUsers();
-
-                },
-                failure: function (response) {
-                    LoadIdentityUsers();
-                    console.log(response);
-                },
-                error: function (response) {
-                    LoadIdentityUsers();
-                    console.log(response);
-                }
-            });
-
-        });
-    });
-</script>
-
+<script src="~/Scripts/importFromAMS.js"></script>
+<script src="~/Scripts/venueCRUD.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
